Fix z-index problem

--- a/resources/css/scrawl.css
+++ b/resources/css/scrawl.css
@@ -1,7 +1,8 @@
 /* Scrawl Editor */
 
-.scrawl-wrapper {
+.input .scrawl-wrapper {
   background: #fff;
+  z-index: 100 !important;
 }
 
 /*
